--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <div class="question1 quesBox ">
             <div class="questionBox">
-                <h1 class="question">If I have 10 millions dollors to buy your girlfriend(boyfriend).Will you sell her(him) to me?</h1>
+                <h1 class="question"></h1>
                 <div class="trashBox disnone">
                     <div class="tip">Maybe you can try to put something here?</div>
                     <img class="trash close" src="image/trashBin.png">
@@ -23,7 +23,7 @@
                 <div class="answerBox">
 
                     <div class="text correct1">
-                            <p>A. never!</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -32,7 +32,7 @@
                             </div>
                     </div>
                     <div class="text textWrongs">
-                            <p>B. Sure,why not!?</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -41,7 +41,7 @@
                             </div>
                     </div>
                     <div class="text textWrongs">
-                            <p>C. I want to see the money first!</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -58,12 +58,12 @@
         </div>
         <div class="question2 quesBox right">
             <div class="questionBox">
-                <h1 class="question">As you see,here is a broken bridge and its broken part.How can I fix it?</h1>
+                <h1 class="question"></h1>
 
                 <div class="answerBox">
                     <div class="text rotateBtn">
                         <span>
-                            <p>A. rotate the broken part</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="text scaleBtn">
                         <span>
-                            <p>B. scale the broken part</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="text moveBtn">
                         <span>
-                            <p>C. move the broken part</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -112,7 +112,7 @@
         </div>
         <div class="question3 quesBox right">
             <div class="questionBox">
-                <h1 class="question">Now as you see, here are three cups.Each cup has a little ball in it. <br/>Could you tell me which one has the red ball? </h1>
+                <h1 class="question"></h1>
                 <div class="answerBox">
                     <div class="message disnone">
                         <h1></h1>
@@ -120,7 +120,7 @@
                     <div class="overlay"></div>
                     <div class="text cupTexts">
                         <span>
-                            <p>A. the first</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="text cupTexts">
                         <span>
-                            <p>B. the second</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="text cupTexts">
                         <span>
-                            <p>C. the third</p>
+                            <p></p>
                             <div class="hoverbox">
                                 <div class="top"></div>
                                 <div class="left"></div>
